@@ -24,6 +24,7 @@
 		"? bobrevamp >= 1.0.0",
 		"? bobplates >= 1.0.0",
 		"? DiscoScience >= 1.0.0",
+		"? finely-crafted-graphics",
 		"? Krastorio2",
 		"? Kux-OrbitalIonCannon",
 		"? Mining-Drones-Tiberium",
